--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -34,27 +34,29 @@
                     android:layout_height="wrap_content"
                     android:text="Số tiền lãi nhận được"
                     android:textColor="@color/color_main"
-                    android:textSize="25sp"/>
+                    android:textSize="20sp"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/interet_result"
+                        android:id="@+id/interest_result"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
                         android:layout_marginTop="20dp"
+                        android:maxLength="10"
+                        android:maxLines="1"
                         android:text="50,000"
                         android:textColor="@color/text"
-                        android:textSize="50sp"/>
+                        android:textSize="50sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@+id/interet_result"
-                        android:layout_alignBottom="@id/interet_result"
+                        android:layout_toEndOf="@+id/interest_result"
+                        android:layout_alignBottom="@id/interest_result"
                         android:layout_marginBottom="10dp"
                         android:layout_marginStart="10dp"
                         android:textStyle="bold"
@@ -75,9 +77,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Số tiền lãi nhận được"
+                    android:text="Tổng số tiền nhận được khi đến hạn"
                     android:textColor="@color/color_main"
-                    android:textSize="25sp"/>
+                    android:textSize="20sp"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -87,11 +89,13 @@
                         android:id="@+id/total_result"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
                         android:layout_marginTop="20dp"
+                        android:maxLength="10"
+                        android:maxLines="1"
                         android:text="1,050,000"
                         android:textColor="@color/text"
-                        android:textSize="50sp"/>
+                        android:textSize="50sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
